fix: scrollbars and focus styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #2e2e32 #1c1c1c;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #2e2e32;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #1c1c1c;
+  border-radius: 14px;
+  border: 3px solid #2e2e32;
+}
+
 @tailwind components;
 @tailwind utilities;
